Section 5/kplabsmodules/modules/sg/sg1.tf
resource "aws_security_group" "ec2-sg" {
  name        = "myec2-sg"
  
  ingress {
    description      = "Allow Inbound from Secret Application"
    from_port        = "8443" #var.app_port
    to_port          = "8443" #var.app_port
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
  }
  output "sg_id" {
    value = aws_security_group.ec2-sg.id
  }
